<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduce_la_url"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <EditText
        android:id="@+id/textUrl"
        android:layout_width="363dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/url"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUrl"
        app:layout_constraintVertical_bias="0.014"
        android:autofillHints="" />

    <Button
        android:id="@+id/botonLanzarNavegador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/lanzar_navegador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textUrl"
        app:layout_constraintTop_toBottomOf="@+id/textUrl" />

    <Button
        android:id="@+id/botonLanzarWebView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/lanzar_webview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/botonLanzarNavegador"
        app:layout_constraintTop_toBottomOf="@+id/botonLanzarNavegador" />
</androidx.constraintlayout.widget.ConstraintLayout>